@@ -1,5 +1,11 @@
 2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
+	* src/htdocs/bugs/bugs.xml:
+	  Test whether automatic website rebuild works now; also
+	  remove prehistoric milestones from bugs list.
+
+2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
 	* src/htdocs/bindings/bindings.xml:
 	  More c++ bindings page updates.
 
